# crop_example

./: pyproject.toml
src/: crop_example.ipynb
src/crop_example/: __init__.py  automate_udependency.py  update_fs.py
src/data/: cas_dakoda.xmi  cas_dakoda_new.xmi  typesystem_dakoda.xml
tests/: test_automate_udependency.py  test_update_fs.py  test_update_udependency.py
