[project]
name = "crop-example"
version = "0.1.0"
description = ""
authors = [
    {name = "dmnc-grdnr",email = "dmnc.crl.grdnr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "dkpro-cassis (>=0.11.1,<0.12.0)",
    "cas-visualizer (>=0.1.5,<0.2.0)",
    "click (==8.2.1)",
    "pytest (>=9.0.3,<10.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
]

[tool.poetry]
packages = [{include = "crop_example", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
